パラメータボタンの設置

--- a/curve_editor/ui/css/panel_editor.css
+++ b/curve_editor/ui/css/panel_editor.css
@@ -24,7 +24,7 @@ iframe {
     height: calc(100% - var(--menu-row-height));
 }
 
-.menu-buttons-id {
+#buttons-param-id {
     display: flex;
     width: 50%;
     margin: 0;
