--- a/curve_editor/ui/css/select_dialog.css
+++ b/curve_editor/ui/css/select_dialog.css
@@ -2,9 +2,17 @@
 
 :root {
     --okcancel-height: 32px;
-    --color-cancel: #494949;
-    --color-cancel-hover: #3a3a3a;
-    --color-cancel-active: #2b2b2b;
+    --color-cancel: #d9d9d9;
+    --color-cancel-hover: #e6e6e6;
+    --color-cancel-active: #c5c5c5;
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        --color-cancel: #494949;
+        --color-cancel-hover: #3a3a3a;
+        --color-cancel-active: #2b2b2b;
+    }
 }
 
 html {
@@ -56,6 +64,7 @@ iframe {
 
 #button-ok {
     background-color: var(--color-button);
+    color: rgb(228, 228, 228);
 }
 
 #button-cancel {
