--- a/curve_editor/ui/src/scss/editor_graph.scss
+++ b/curve_editor/ui/src/scss/editor_graph.scss
@@ -1,4 +1,4 @@
-@import url('./variables.css');
+@import url('./variables.scss');
 
 :root {
     --color-fit-button: rgb(240, 240, 240);
@@ -19,16 +19,13 @@
     }
 }
 
-html {
+#container {
     width: 100%;
     height: 100%;
-}
-
-body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
+    min-width: 50px;
+    min-height: 50px;
     overflow: hidden;
+    position: relative;
 }
 
 #canvas {
@@ -54,6 +51,10 @@ body {
     opacity: 0.1;
 }
 
+.axis-label path,
+.axis-label line {
+    stroke-width: 0;
+}
 .axis-label text {
     fill: var(--color-content);
     font: 500 11px
