--- a/curve_editor/ui/src/scss/panel_editor.scss
+++ b/curve_editor/ui/src/scss/panel_editor.scss
@@ -1,23 +1,12 @@
-@import url('./toolbar.css');
+@import url('./toolbar.scss');
 
-html {
-    width: 100%;
-    height: 100%;
-}
-
-body {
+.container-panel-editor {
     display: flex;
     flex-direction: column;
+    background-color: var(--color-bg);
     width: 100%;
     height: 100%;
-    margin: 0;
     overflow: hidden;
-}
-
-iframe {
-    border: none;
-    width: 100%;
-    user-select: none;
 }
 
 .menu-row {
