--- a/curve_editor/ui/src/scss/panel_main.scss
+++ b/curve_editor/ui/src/scss/panel_main.scss
@@ -1,28 +1,12 @@
-@import url('./variables.css');
+@import url('./variables.scss');
 
-html {
-    width: 100%;
-    height: 100%;
-}
-
-body {
+.container-panel-main {
     display: flex;
     flex-direction: column;
     background-color: var(--color-bg);
     width: 100%;
     height: 100%;
-    margin: 0;
     overflow: hidden;
-}
-
-iframe {
-    border: none;
-    width: 100%;
-    user-select: none;
-}
-
-#toolbar {
-    height: var(--menu-row-height);
 }
 
 .button-apply {
@@ -40,18 +24,18 @@ iframe {
     text-overflow: ellipsis;
     font: var(--font);
     transition: all .2s ease-out;
-}
 
-.button-apply:hover {
-    background: var(--color-button-hover);
-}
+    &:hover {
+        background: var(--color-button-hover);
+    }
 
-.button-apply:focus {
-    outline: none;
-}
+    &:focus {
+        outline: none;
+    }
 
-.button-apply:active {
-    background: var(--color-button-active);
+    &:active {
+        background: var(--color-button-active);
+    }
 }
 
 #separator {
@@ -66,14 +50,14 @@ iframe {
     justify-content: center;
     align-items: center;
     transition: all .2s ease-out;
-}
 
-#separator:hover {
-    background: var(--color-control-hover);
-}
+    &:hover {
+        background: var(--color-control-hover);
+    }
 
-#separator:active {
-    background: var(--color-control-active);
+    &:active {
+        background: var(--color-control-active);
+    }
 }
 
 #separator-handle {
