--- a/curve_editor/ui/src/scss/select_dialog.scss
+++ b/curve_editor/ui/src/scss/select_dialog.scss
@@ -1,4 +1,4 @@
-@import url('./variables.css');
+@import url('./variables.scss');
 
 :root {
     --okcancel-height: 32px;
@@ -15,27 +15,12 @@
     }
 }
 
-html {
-    width: 100%;
-    height: 100%;
-}
-
-body {
+.selectdialog-container {
     display: flex;
     flex-direction: column;
     width: 100%;
     height: 100%;
-    margin: 0;
     overflow: hidden;
-}
-
-iframe {
-    border: none;
-    width: 100%;
-}
-
-#panel-editor {
-    height: calc(100% - var(--okcancel-height));
 }
 
 .okcancel-row {
@@ -65,24 +50,24 @@ iframe {
 #button-ok {
     background-color: var(--color-button);
     color: rgb(228, 228, 228);
+
+    &:hover {
+        background-color: var(--color-button-hover);
+    }
+
+    &:active {
+        background-color: var(--color-button-active);
+    }
 }
 
 #button-cancel {
     background-color: var(--color-cancel);
-}
 
-#button-ok:hover {
-    background-color: var(--color-button-hover);
-}
+    &:hover {
+        background-color: var(--color-cancel-hover);
+    }
 
-#button-ok:active {
-    background-color: var(--color-button-active);
-}
-
-#button-cancel:hover {
-    background-color: var(--color-cancel-hover);
-}
-
-#button-cancel:active {
-    background-color: var(--color-cancel-active);
+    &:active {
+        background-color: var(--color-cancel-active);
+    }
 }
