適用ボタンの高さを可変にし、適用モードの変更方法をメニューからドロップダウンに変更した

--- a/curve_editor/ui/src/style/common.scss
+++ b/curve_editor/ui/src/style/common.scss
@@ -6,7 +6,7 @@
         pointer-events: none;
         content: "";
         position: absolute;
-        top: 13px;
+        top: calc(50% - 5px);
         right: 18px;
         transform: rotate(45deg);
         width: 5.5px;
