--- a/curve_editor/ui/src/style/preset.scss
+++ b/curve_editor/ui/src/style/preset.scss
@@ -32,6 +32,7 @@
     width: calc(100% - var(--margin) * 2);
     height: calc(100% - var(--searchbar-height) - var(--margin) * 4 - 32px);
     padding: var(--margin);
+    flex-grow: 1;
     &::-webkit-scrollbar {
         width: 5px;
         background-color: var(--color-bg);
